// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawer > custom header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > function header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_f_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_c_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders custom size=small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_i_"
      aria-haspopup="dialog"
      type="button"
    >
      button
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with default Props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_0_"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="_r_3_"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with default Props and function children open 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders with disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with disclosure and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open drawer
    </button>
  </div>
  <div>
    <div
      class="backdrop-drawer styles__lrojhc7 styles__lrojhc6 styles_open_true__lrojhc8 styles_visible_true__lrojhc9"
      data-testid="test-backdrop"
      data-visible="true"
    >
      <dialog
        aria-label="drawer-test"
        aria-modal="true"
        class="styles_medium__1iezf7y4 styles__lrojhca styles_placement_top-right__lrojhcl styles_size_medium__lrojhco"
        data-size="medium"
        data-testid="test"
        id="drawer-test"
        open=""
        style="--lrojhc0: -0px; --lrojhc1: 0px;"
        tabindex="0"
      >
        <div
          class="styles__1iezf7y6 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_1rem_xxsmall__toi52u3v styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <h2
            class="styles__1iezf7y9 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmallStrong__m4c9ow1b style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          >
            header
          </h2>
          <hr
            aria-orientation="horizontal"
            class="styles__bu43fbb styles_direction_horizontal__bu43fbc styles_sentiment_neutral__bu43fbi"
            style="--bu43fb0: 1px;"
          />
          <div
            class="styles__1iezf7y7"
          >
            <div
              class="styles__1iezf7y8"
            >
              <div>
                drawer
              </div>
            </div>
          </div>
          <div
            class="styles__1iezf7ya styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
          />
        </div>
        <div
          class="styles__lrojhc2"
        >
          <button
            aria-label="close"
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            data-testid="test-close-button"
            type="button"
          >
            <svg
              class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </dialog>
    </div>
  </div>
</DocumentFragment>
`;

exports[`drawer > renders with open={true} 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders without disclosure 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > renders without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`drawer > with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-controls="drawer-test"
      aria-haspopup="dialog"
      type="button"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;
